--- a/hedyat-alsaf/index.html
+++ b/hedyat-alsaf/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="ar" dir="rtl">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>هدية الصف للمربي</title>
+    <title>هدية الصف</title>
   </head>
-  <body class="bg-white">
+  <body class="bg-blue-950 text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
